# pollux-payload

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Dockerfile  Dockerfile.alpine  Dockerfile.qarnot  Makefile  README.md
.github/workflows/: build.yml  test_build_docker_image.yml  test_local_mode.yml
regress/: different_payloads.yaml  local_test.yaml
src/: CMakeLists.txt
src/app/: EscherApp.cpp
src/c++/: CMakeLists.txt  EscherApp.cpp  PolluxApp.cpp  PolluxAppException.h  PolluxPayload.cpp
src/c++/common/: ZebulonPayloadClient.cpp  ZebulonPayloadClient.h
src/c++/example/: CMakeLists.txt  PolluxPayload.cpp
src/c++/examples/: CMakeLists.txt  PolluxPayload.cpp
src/c++/examples/nativeC/: CMakeLists.txt  README  main.cpp  pollux.h  pollux_api.h
src/c++/examples/nativeCpayload/: CMakeLists.txt  PolluxPayloadNativeC.cpp  README
src/c++/examples/pso/: CMakeLists.txt  OptimizationFunctions.cpp  OptimizationFunctions.h  Particle.cpp  Particle.h  PolluxPayloadPSO.cpp  SavePoints.h  Utilities.h
src/c++/examples/test/: CMakeLists.txt  PolluxPayloadTest.cpp
src/c++/pollux/: CMakeLists.txt  PolluxMethods.cpp  PolluxMethods.h  PolluxPayload.cpp  PolluxPayload.h  PolluxPayloadException.h  ZebulonPayloadClient.cpp  ZebulonPayloadClient.h  pollux.h
src/launcher/: helloworld.py  pollux.py  pollux.yaml  test_docker.py
src/polluxtest/: polluxapptest.py
src/proto/: CMakeLists.txt  escher.proto  escher_payload.proto  pollux.proto  pollux_payload.proto
src/python/: Makefile  client.py  escherapp.py  pollux_payload_pb2.py  pollux_payload_pb2_grpc.py  pollux_pb2.py  polluxapp.py
